--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.2.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
