--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@codesandbox/sandpack-react": "^2.20.0",
     "@google/genai": "^0.13.0",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
